# smartcartai

./: .gitignore  README.md  dev.js  package-lock.json  package.json  run_dev.ps1  run_dev.sh
backend/: .env.example  ai_provider.py  config.py  diagnose_api.py  main.py  pyproject.toml  render.yaml
backend/tests/: conftest.py  test_health.py  test_optimise.py  test_scan.py
data/: seed.sql
src/app/: globals.css  layout.tsx  page.tsx
src/app/checkout/: page.tsx
src/app/insights/: page.tsx
src/app/scanner/: page.tsx
src/app/setup/: page.tsx
src/components/: AICard.tsx  BudgetBar.tsx  CartItem.tsx  ComplianceCircle.tsx  DemoChips.tsx  InsightsChart.tsx  QRDisplay.tsx  RemindersPanel.tsx  ScannerView.tsx  StoreNav.tsx
src/components/ui/: shape-landing-hero.tsx  slider.tsx
src/lib/: cart.ts  supabase.ts
